--- a/tags.html
+++ b/tags.html
@@ -4,7 +4,12 @@ title: Tags
 permalink: /blog/tags
 ---
 
-<h1 class="post-title tag-page-title">Tags:</h1>
+<h1 class="post-title tag-page-title">Tags</h1>
+<div class="subtitle">
+  view all
+  <a href=/blog>posts</a>
+  on {{ site.title }}' blog
+</div>
 <div id="tag-cloud">
   {{ site | tag_cloud }}
 </div>
