--- a/photography.html
+++ b/photography.html
@@ -1,64 +1,42 @@
 ---
-layout: page
+layout: default
 title: Photography
 permalink: /photography/
+description: Hi, I am Charalampos Kardaris and this is my photography. This is where I share photos I have taken in my trips and my leisure time.
 ---
-
-<style TYPE="text/css">
-.thumbnail {
-  height: auto;
-  max-width: 100%;
-  display: block;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  grid-gap: 10px;
-}
-
-.grid-item {
-  width: 100%;
-}
-</style>
-
 {%- if site.data.photos.size > 0 -%}
-<div class="grid-container">
-  {% for thumbnail in site.data.photos %}
-  <div class="grid-item">
-    <a href="/photography/{{ thumbnail.name }}">
-      <!--
-      Every photo in the grid is at least 240px and maximum around 480px,
-      since we create a new column if there is enough space. We adjust the
-      'sizes' attribute accordingly with some leeway for the borders.
+  <div class="grid-container">
+    {% for thumbnail in site.data.photos %}
+    <div class="grid-item">
+      <a href="/photography/{{ thumbnail.name }}">
+        <!--
+        Every photo in the grid is at least 240px and maximum around 480px,
+        since we create a new column if there is enough space. We adjust the
+        'sizes' attribute accordingly with some leeway for the borders.
 
-      For DPR: 1 the mapping is 1-1
-      For DPR: 2 we select the 800x800 images in the big grid.
-      For DPR: 3 we select the 1200x1200 images in the big grid.
-      -->
-      <img
-      class="thumbnail"
-      src="/photography/thumbnails/400x400/{{ thumbnail.name }}.jpg" alt="{{ thumbnail.caption }}"
-      srcset="
-          {%-assign values = "400,800,1200,1600,2400" | split: "," -%}
-          {%- for w in values -%}
-          /photography/thumbnails/{{ w }}x{{ w }}/{{ thumbnail.name }}.jpg {{w}}w
-          {%- unless forloop.last %}, {% endunless %}
-          {%- endfor -%}
-      "
-      sizes="(max-width: 600px) 100vw, 400px"
-      >
-    </a>
-    <div class="photo-caption" style="text-align: center;">
-      <p><em>{{thumbnail.caption}}</em></p>
+        For DPR: 1 the mapping is 1-1
+        For DPR: 2 we select the 800x800 images in the big grid.
+        For DPR: 3 we select the 1200x1200 images in the big grid.
+        -->
+        <img
+        class="thumbnail"
+        src="/photography/thumbnails/400x400/{{ thumbnail.name }}.jpg" alt="{{ thumbnail.caption }}"
+        srcset="
+            {%-assign values = "400,800,1200,1600,2400" | split: "," -%}
+            {%- for w in values -%}
+            /photography/thumbnails/{{ w }}x{{ w }}/{{ thumbnail.name }}.jpg {{w}}w
+            {%- unless forloop.last %}, {% endunless %}
+            {%- endfor -%}
+        "
+        sizes="(max-width: 600px) 100vw, 400px"
+        >
+      </a>
+      <div class="photo-caption" style="text-align: center;">
+        <p><em>{{thumbnail.caption}}</em></p>
+      </div>
     </div>
+    {% endfor %}
   </div>
-  {% endfor %}
-</div>
 {%- else -%}
-<h4>No photos to show</h4>
+  <h4>No photos to show</h4>
 {%- endif -%}
