Add comment preview button

--- a/account.html
+++ b/account.html
@@ -54,6 +54,7 @@ if you want to change your name or username, send a new comment
 
 </div>
 
+{% include script.html script="load.js" %}
 {% include script.html script="openpgp.js" %}
 {% include script.html script="account.js" %}
 {% include script.html script="eye.js" %}
