Introduce comment feeds

--- a/tags.html
+++ b/tags.html
@@ -8,7 +8,7 @@ nav: Blog
 view all <a href=/blog>posts</a>
 </div>
 
-<div class="tag-title">Tags: </div>
+<div class="blog-subpage-title">Tags: </div>
 <div id="tag-cloud">
   {{ site | tag_cloud }}
 </div>
