--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@ permalink: /blog
 description: Hi, I am Charalampos Kardaris and this is my blog. This is where I share my thoughts about software development and the world in general.
 ---
 <div class="blog-subtitle">
-subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a>, view all <a href="/blog/tags">tags</a>
+subscribe to this <a href="{{ "/feed.xml" | relative_url }}">feed</a>, view all <a href="/blog/tags">tags</a>
 </div>
 
 {%- if site.posts.size > 0 -%}
